[gd_scene load_steps=6 format=3 uid="uid://dmoa37dm4ehqc"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_n4geu"]
[ext_resource type="FontFile" uid="uid://drq86l6656w0b" path="res://assets/font/Early GameBoy.ttf" id="2_ioj14"]
[ext_resource type="PackedScene" uid="uid://ce7rgb26q4wf2" path="res://scenes/menus/sound_button.tscn" id="3_yhihb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqw3a"]
bg_color = Color(0, 0, 0, 0.243137)

[sub_resource type="LabelSettings" id="LabelSettings_bib5n"]
font = ExtResource("2_ioj14")
font_color = Color(0.564706, 0.54902, 0.780392, 1)

[node name="PauseMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bqw3a")
script = ExtResource("1_n4geu")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 17.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_bib5n")
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -38.0
offset_right = 48.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" parent="Buttons" instance=ExtResource("3_yhihb")]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.690196, 0.811765, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_ioj14")
theme_override_font_sizes/font_size = 8
text = "Resume"

[node name="Tutorial" parent="Buttons" instance=ExtResource("3_yhihb")]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.690196, 0.811765, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_ioj14")
theme_override_font_sizes/font_size = 8
text = "Tutorial"

[node name="Options" parent="Buttons" instance=ExtResource("3_yhihb")]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.690196, 0.811765, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_ioj14")
theme_override_font_sizes/font_size = 8
text = "Options"

[node name="MainMenu" parent="Buttons" instance=ExtResource("3_yhihb")]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.690196, 0.811765, 0.933333, 1)
theme_override_fonts/font = ExtResource("2_ioj14")
theme_override_font_sizes/font_size = 8
text = "Main Menu"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
